@@ -1599,16 +1599,22 @@ Channel.prototype.tryQueuePlaylist = function(user, data) {
             return;
         }
 
-        if (data.pos === "next") {
-            pl.reverse();
-            if (self.playlist.items.length === 0)
-                pl.unshift(pl.pop());
-        }
+        try {
+            if (data.pos === "next") {
+                pl.reverse();
+                if (pl.length > 0 && self.playlist.items.length === 0)
+                    pl.unshift(pl.pop());
+            }
 
-        for (var i = 0; i < pl.length; i++) {
-            pl[i].pos = data.pos;
-            pl[i].temp = !self.hasPermission(user, "addnontemp");
-            self.addMedia(pl[i], user);
+            for (var i = 0; i < pl.length; i++) {
+                pl[i].pos = data.pos;
+                pl[i].temp = !self.hasPermission(user, "addnontemp");
+                self.addMedia(pl[i], user);
+            }
+        } catch (e) {
+            Logger.errlog.log("Loading user playlist failed!");
+            Logger.errlog.log("PL: " + user.name + "-" + data.name);
+            Logger.errlog.log(e.stack);
         }
     });
 }
