@@ -1,3 +1,7 @@
+Sat Oct 12 15:53 2013 CDT
+    * lib/channel.js: Add a try-catch to playlist loading to catch
+      the mysterious error that's been coming up (corrupt pl?)
+
 Mon Oct 07 19:00 2013 CDT
     * lib/channel.js: Rearrange the callback order to prevent database
       lookups from racing with the playlist queue.
